--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@tabler/icons-react": "^3.3.0",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
@@ -23,7 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
