--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^3.3.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
